[package]
name = "quelana_gemini_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
clap = { version = "4.2", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
cpal = "0.15"
hound = "3.4"
tempfile = "3.6"
shell-words = "1.1"
tray-item = "0.6"
rdev = "0.5"
eframe = "0.31"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "2.4"
